Constraint: fix alignment problems caused by duplicated paddings

--- a/src/components/block-content/style.scss
+++ b/src/components/block-content/style.scss
@@ -2,7 +2,6 @@
 @import "../../variables";
 
 .block-content {
-  align-items: center;
   display: flex;
   flex-direction: column;
 
