--- a/src/components/intro/style.scss
+++ b/src/components/intro/style.scss
@@ -21,6 +21,8 @@
   &__constraint {
     display: flex;
     flex-direction: column;
+    padding-left: 0;
+    padding-right: 0;
 
     @include mq($from: tablet) {
       flex-direction: row;
