--- a/src/templates/projekt/intro-project/style.scss
+++ b/src/templates/projekt/intro-project/style.scss
@@ -27,9 +27,10 @@
     flex-direction: column;
     flex-shrink: 0;
     justify-content: center;
-    padding-bottom: 4rem 2rem;
+    padding: 1.5rem 2rem 0 1.5rem;
 
     @include mq($from: desktop) {
+      padding-bottom: 2rem;
       padding-left: 4rem;
       padding-right: 4rem;
       width: 50%;
